test/k8sT/manifests/cnp-matchexpressions.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy to test matchExpressions key"
metadata:
  name: "l7-match-expressions"
spec:
  endpointSelector:
    matchLabels:
      id: app1
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - {key: 'appSecond', operator: Exists}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/public"
